--- a/src/main/webapp/WEB-INF/templates/atmosphere/index.html
+++ b/src/main/webapp/WEB-INF/templates/atmosphere/index.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <th:block th:include="/common/head::head('广告机 - 广告机管理后台')"/>
+    <script type="text/javascript" src="../../../static/application/js/echarts.min.js"></script>
     <style type="text/css">
         .weatherUl{
             width:700px;
@@ -97,27 +98,7 @@
         </div>
     </div>
 
-
-    <div id="weather-modal" class="modal modal-fixed-footer" style="height: 150px">
-        <h4  class="text" style=" text-align:center;">大气数据采集</h4>
-            <tbody class="card">
-            <ul class="weatherUl">
-                <th><li>广告机ID</li></th>
-                <th><li>温度</li></th>
-                <th><li>湿度</li></th>
-                <th><li>pm2.5</li></th>
-                <th><li>亮度</li></th>
-            </ul>
-            </tbody>
-            <ul class="weatherUl">
-            <tbody class="card">
-                <th><li id="weather-machineID">id</li></th>
-                <td><li id="weather-temperature">temperature</li></td>
-                <td><li id="weather-humidity">humidity</li></td>
-                <td><li id="weather-pm25">pm25</li></td>
-                <td><li id="weather-brightness">brightness</li></td>
-            </tbody>
-            </ul>
+    <div id="weather-modal" style="height: 500px;width: 500px" class="modal modal-fixed-footer">
     </div>
 </main>
 <th:block th:include="/common/footer::footer"/>
@@ -133,11 +114,48 @@
             url:url,
             type:"GET",
             success:function (data) {
-                $("#weather-machineID").text(data['weather'].machineID);
-                $("#weather-temperature").text(data['weather'].temperature);
-                $("#weather-brightness").text(data['weather'].brightness);
-                $("#weather-pm25").text(data['weather'].pm25);
-                $("#weather-humidity").text(data['weather'].humidity);
+                var id = data['weather'].id;
+                var temperature = data['weather'].temperature;
+                var brightness = data['weather'].brightness;
+                var pm25 = data['weather'].pm25;
+                var humidity = data['weather'].humidity;
+                var dom = document.getElementById("weather-modal");
+                var myChart = echarts.init(dom);
+                var app = {};
+                option = null;
+                option = {
+                    title: {
+                        text:'id为'+id+ '号设备大气数据信息柱状显示图',
+                        x: '10',
+                        y: '10',
+                        textStyle: {
+                            fontWeight: 'normal',
+                            fontSize: 24,
+                            color: "blue",
+                        }
+                    },
+                    xAxis: {
+                        type: 'category',
+                        data: ['温度', '湿度', '空气污染指数', '亮度']
+                    },
+                    yAxis: {
+                        type: 'value'
+                    },
+                    series: [{
+                        label: {
+                            normal: {
+                                show: true,
+                                position: 'inside',
+                                // formatter: '{c},({d}%)'//多值的嵌套
+                            }
+                        },
+                        data: [temperature, brightness, pm25, humidity],
+                        type: 'bar'
+                    }]
+                };
+                if (option && typeof option === "object") {
+                    myChart.setOption(option, true);
+                }
             },error:function () {
             }
         });
