--- a/src/main/webapp/WEB-INF/templates/common/footer.html
+++ b/src/main/webapp/WEB-INF/templates/common/footer.html
@@ -11,6 +11,9 @@
         <li th:if="${loginUser.getUsername()=='junpai'}" >
           © 2017 Copyright 中山骏牌路灯有限公司
         </li>
+        <li th:if="${loginUser.getUsername()=='youwei'}" >
+          © 2017 Copyright 中山骏牌路灯有限公司
+        </li>
         <li th:if="${loginUser.getUsername()=='xm'}" >
           © 2017 Copyright 珠海希梦电子科技有限公司
         </li>
